--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <!--- basic page needs
     ================================================== -->
     <meta charset="utf-8">
-    <title>Hesed - About</title>
+    <title>Agape Baptist Church - About</title>
     <meta name="description" content="">
     <meta name="author" content="">
 
