--- a/about.html
+++ b/about.html
@@ -75,7 +75,7 @@
         <div class="gradient-overlay"></div>
         <div class="row page-header__content">
             <div class="column">
-                <h1>We Are Agape Baptist Church</h1>
+                <h1>We are Agape Baptist Church</h1>
             </div>
         </div>
 
