--- a/contact.html
+++ b/contact.html
@@ -109,9 +109,10 @@
                     <div class="column large-6 tab-full">
                         <h3>Main Office.</h3>
                         <p>
-                        1600 Amphitheatre Parkway<br>
-                        Mountain View, CA 94043 US<br>
-                        Mon-Thur 8:30am – 4:30pm 
+                        401, Chapel, EMERALD-2,<br>
+                        PetraPark Appartments, Ramamurthy nagar main road<br>
+                        Bengaluru, Karnataka, 560016
+                        Sunday 8:30am – 4:30pm 
                         </p>
                     </div>
 
@@ -119,8 +120,8 @@
                         <h3>Contact Info.</h3>
                         <p>
                         sayhello@hesed.com<br>
-                        info@hesed.com <br>
-                        Phone: +197 543 2345
+                        pastor@agapebaptistchurch.in <br>
+                        Phone: +91 
                         </p>
                     </div>
                 </div>
