--- a/contact.html
+++ b/contact.html
@@ -111,7 +111,7 @@
                         <p>
                         401, Chapel, EMERALD-2,<br>
                         PetraPark Appartments, Ramamurthy nagar main road<br>
-                        Bengaluru, Karnataka, 560016
+                        Bengaluru, Karnataka, 560016 <br>
                         Sunday 8:30am – 4:30pm 
                         </p>
                     </div>
@@ -121,7 +121,7 @@
                         <p>
                         sayhello@hesed.com<br>
                         pastor@agapebaptistchurch.in <br>
-                        Phone: +91 
+                        Phone: +91 9060473587
                         </p>
                     </div>
                 </div>
