--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <!--- basic page needs
     ================================================== -->
     <meta charset="utf-8">
-    <title>Hesed - Contact</title>
+    <title>Agape Baptist Church - Contact</title>
     <meta name="description" content="">
     <meta name="author" content="">
 
