--- a/index.html
+++ b/index.html
@@ -76,11 +76,13 @@
 
         <div class="row hero-content">
 
+           
             <div class="column large-full hero-content__text">
-                <h1>
-                    Teaching and Transforming Lives  <br>
-                    through the Word of God and Christ’s love <br>
-                </h1>
+                <h1 style="font-size: 24px;">
+                    Teaching and Transforming Lives  <br>
+                    through the Word of God and Christ’s love <br>
+                </h1>
+            </div>
 
                 <div class="hero-content__buttons">
                     <a href="events.html" class="btn btn--stroke">Upcoming Events</a>
