--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <div class="column large-full hero-content__text">
                 <h1 style="font-size: 24px;">
                     Teaching and Transforming Lives  <br>
-                    through the Word of God and Christ’s love <br>
+                    through the Word of God and in Christ’s love <br>
                 </h1>
             </div>
 
