--- a/index.html
+++ b/index.html
@@ -79,7 +79,9 @@
                 <div class="column large-full hero-content__text">
                 <h1>
                     Teaching and Transforming Lives  <br>
-                    through the Word of God and in Christ’s love <br>
+                    through <br> 
+                    the Word of God <br> 
+                    and in Christ’s love <br>
                 </h1>
             </div>
 
