--- a/index.html
+++ b/index.html
@@ -77,12 +77,12 @@
         <div class="row hero-content">
 
                 <div class="column large-full hero-content__text">
-                <h1>
+                <h2>
                     Teaching and Transforming Lives  <br>
                     through <br> 
                     the Word of God <br> 
                     and in Christ’s love <br>
-                </h1>
+                </h2>
             </div>
 
                 <div class="hero-content__buttons">
@@ -122,7 +122,7 @@
         <div class="row row-y-center about-content">
 
             <div class="column large-half medium-full">
-                <h3 class="subhead">Welcome to Hesed</h3>
+                <h3 class="subhead">Welcome to Agape</h3>
                 <p class="lead">
                 Vero autem et officiis officia sint in odio in iusto. 
                 Blanditiis tempore ipsa saepe quaerat quas sed. Ut velit 
