--- a/index.html
+++ b/index.html
@@ -124,11 +124,11 @@
             <div class="column large-half medium-full">
                 <h3 class="subhead">Welcome to Agape</h3>
                 <p class="lead">
-                Vero autem et officiis officia sint in odio in iusto. 
-                Blanditiis tempore ipsa saepe quaerat quas sed. Ut velit 
-                necessitatibus est repellat sunt quia fuga doloremque. 
-                Nostrum et ut optio suscipit eos quisquam et. Nulla molestiae 
-                voluptates hic et accusantium occaecati recusandae veniam cum.
+                    At Agape we believe God’s Word is paramount which 
+                    is preached and taught in an atmosphere of love.
+                    Come and enjoy worshipping God with fellow-believers 
+                    who love Him and are thirsty to learn and 
+                    be transformed by Him.
                 </p>
                 <a href="about.html" class="btn btn--primary btn--about">More About Hesed</a>
             </div>
