--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                     who love Him and are thirsty to learn and 
                     be transformed by Him.
                 </p>
-                <a href="about.html" class="btn btn--primary btn--about">More About Hesed</a>
+                <a href="about.html" class="btn btn--primary btn--about">More About Agape</a>
             </div>
 
             <div class="column large-half medium-full">
