--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
         <div class="header-logo">
             <a class="site-logo" href="index.html">
-                <img src="ABC LOGO.svg" alt="Homepage">
+                <img src="images/ABC LOGO.svg" alt="Homepage">
             </a>
         </div>
 
