--- a/about.html
+++ b/about.html
@@ -90,12 +90,9 @@
             <div class="column">
 
                 <p class="lead drop-cap">
-                Non ratione vel. Non consequatur hic et labore et quia doloribus. 
-                Dolorum rerum dignissimos inventore id corporis rerum. At nesciunt 
-                ut error est soluta qui quibusdam blanditiis animi. Ad saepe quia at 
-                numquam temporibus quisquam ipsa. Ab omnis aut ratione ipsam voluptates 
-                quia. Veniam temporibus et. Aperiam sint veniam libero perferendis a. 
-                Quisquam optio quidem et.
+                We believe that there is one and only one true and living GOD;
+                that He is holy in character, the Maker and Supreme ruler of heaven and earth; 
+                that He is holy, righteous and true. (Ephesians 4:6)
                 </p>
 
                 <div class="row">
