--- a/about.html
+++ b/about.html
@@ -97,17 +97,20 @@
 
                 <div class="row">
                     <div class="column large-half medium-full">
-                        <h2>Our Purpose.</h2>
+                        <h2>Our Belief.</h2>
                         <p>
-                        Earum quia in. Sed deleniti sit aut molestiae eum consequatur 
-                        quidem. Non beatae molestias eveniet repellendus doloribus odio 
-                        sit nihil. Est labore a praesentium esse quisquam. Cumque ut 
-                        omnis harum omnis eaque.
-
-                        Et minus tempora dicta blanditiis rem sequi. Est doloremque 
-                        odit doloremque molestiae qui necessitatibus consequatur alias. 
-                        Quisquam rerum nihil labore nihil eos et. Dignissimos veniam odio 
-                        architecto voluptate ut molestias in porro et.
+                        WE believe in the universal church, a living spiritual body 
+                        of which Christ is the Head all regenerated persons are members.
+                        We believe in the local church consisting of a company of believers 
+                        in Jesus Christ, baptized on a credible profession of faith, 
+                        and associated for worship, work and fellowship. 
+                        We believe that a New Testament church, according to divine 
+                        purpose and plan, is a visible, local organized body;
+                        that it is comprised of baptized believers associated together 
+                        by a covenant of faith and fellowship in the gospel; 
+                        that it is a sovereign, independent, democratic and evangelistic body; 
+                        that its ministry is gloriously blessed with the presence and 
+                        leadership of the Holy Spirit and the light and revelation of the written Word.
                         </p>
                     </div>
 
