--- a/about.html
+++ b/about.html
@@ -117,15 +117,13 @@
                     <div class="column large-half medium-full">
                         <h2>Our Mission.</h2>
                         <p>
-                        Et unde et quibusdam laudantium consequatur. Necessitatibus ut 
-                        ullam laudantium doloremque non qui expedita. Officia magnam 
-                        eos aut quae et est. Labore id assumenda dignissimos sapiente 
-                        qui voluptatem. Omnis soluta eos ex dolores.
-
-                        Quas eaque eveniet rem voluptas rerum et nesciunt ipsum nulla. 
-                        Nulla exercitationem nesciunt et tempore reprehenderit. Vero 
-                        modi eum dolores in sunt quis sed. Quis quidem aut quam quod 
-                        et. 
+                        It was in 2003 that the Lord led Aroop and Rebecca Shelli Kumar 
+                        with their two young children, out of a local Baptist Church 
+                        in Koramangala, Bangalore, to the locality of Ramamurthy Nagar,
+                        Bangalore, to plant a church. 
+                        Worship services were begun in a rented facility in November 
+                        with a couple of families joining the Agape Baptist Fellowship. 
+                        Children’s clubs and AWANA were held regularly in this locality.
                         </p>
                     </div>
                 </div>
