--- a/index.html
+++ b/index.html
@@ -79,8 +79,7 @@
                 <div class="column large-full hero-content__text">
                 <h1>
                     Teaching and Transforming Lives  <br>
-                    through <br> 
-                    the Word of God <br> 
+                    through the Word of God <br> 
                     and in Christ’s love <br>
                 </h1>
             </div>
@@ -138,22 +137,32 @@
                     <li>
                         <h4>Main Church Service</h4>
                         <p>
-                        Sunday - 9:00 AM | 1:00 PM | 4:30 PM <br>
-                        1600 Amphitheatre Parkway, Mt. View, CA, 94043
+                        Sunday - 10:15 AM to 12:20 PM <br>
+                        4th floor, EMARALD-2, Petrapark chapel
+                        Ramamurthy Nagar Main Road.
                         </p>
                     </li>
                     <li>
-                        <h4>Kids Church</h4>
+                        <h4>Sunday School- ADULT/YOUTH/CHILDREN</h4>
                         <p>
-                        Sunday - 9:00 AM | 1:00 PM | 4:30 PM <br>
-                        1600 Amphitheatre Parkway, Mt. View, CA, 94043
+                        Sunday - 12:30 PM to 01:00 PM<br>
+                        4th floor, EMARALD-2, Petrapark chapel
+                        Ramamurthy Nagar Main Road.
                         </p>
                     </li>
                     <li>
-                        <h4>Prayer Meeting</h4>
+                        <h4>Agape Baptist Fellowship</h4>
                         <p>
-                        Saturday - 7:00 PM <br>
-                        1600 Amphitheatre Parkway, Mt. View, CA, 94043
+                        Sunday - 06:30 PM - 7:30 PM <br>
+                        45/1 8th cross, 5th Main Road,
+                        Kammanahalli, Bengaluru.
+                        </p>
+                    </li>
+                    <li>
+                        <h4>BIBLE STUDY and PRAYER MEETING</h4>
+                        <p>
+                        Wednesday - 07:00 PM - 8:30 PM <br>
+                        Online GOOGLE Meet
                         </p>
                     </li>
                 </ul> <!-- end about-sched-->
