--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
 
                 <div class="column large-full hero-content__text">
                 <h1>
-                    Teaching and Transforming Lives  <br>
-                    through the Word of God <br> 
-                    and in Christ’s love <br>
+                    Teaching and Transforming Lives<br>
+                    through the Word of God<br> 
+                    and in Christ’s love<br>
                 </h1>
             </div>
 
@@ -123,11 +123,13 @@
             <div class="column large-half medium-full">
                 <h3 class="subhead">Welcome to Agape</h3>
                 <p class="lead">
-                    At Agape we believe God’s Word is paramount which 
-                    is preached and taught in an atmosphere of love.
-                    Come and enjoy worshipping God with fellow-believers 
-                    who love Him and are thirsty to learn and 
-                    be transformed by Him.
+                    At Agape Baptist Church, 
+                    we believe that God’s love transforms lives. 
+                    Our desire is to see people come to know Jesus, grow in His Word,
+                    and live out His purpose in their daily lives. 
+                    We are a Christ-centered, Spirit-led, and Bible-based church 
+                    Committed to bringing hope and healing to our city and beyond
+
                 </p>
                 <a href="about.html" class="btn btn--primary btn--about">More About Agape</a>
             </div>
