--- a/index.html
+++ b/index.html
@@ -123,13 +123,11 @@
             <div class="column large-half medium-full">
                 <h3 class="subhead">Welcome to Agape</h3>
                 <p class="lead">
-                    At Agape Baptist Church, 
-                    we believe that God’s love transforms lives. 
-                    Our desire is to see people come to know Jesus, grow in His Word,
-                    and live out His purpose in their daily lives. 
-                    We are a Christ-centered, Spirit-led, and Bible-based church 
-                    Committed to bringing hope and healing to our city and beyond
-
+                   we believe that God’s love transforms lives.
+                   Our desire is to see people come to know Jesus, 
+                   grow in His Word, and live out His purpose in their daily lives.
+                   We are a Christ-centered, Spirit-led, 
+                   and Bible-based church committed to bringing hope and healing to our city and beyond.
                 </p>
                 <a href="about.html" class="btn btn--primary btn--about">More About Agape</a>
             </div>
