--- a/styles.html
+++ b/styles.html
@@ -575,7 +575,7 @@
                         </p>
         
                         <p>
-                        <a href="https://goo.gl/maps/bc7C7eYtSmnNs6216" target="_blank" class="btn btn--footer">Get Direction</a>
+                        <a href="https://www.google.com/maps/place/Agape+Baptist+Church/@13.0119496,77.6704672,80m/data=!3m1!1e3!4m6!3m5!1s0x3bae11238ab91997:0x5ba10b26cddffc3b!8m2!3d13.0119228!4d77.6705699!16s%2Fg%2F11fzwg90t2!5m1!1e2?entry=ttu&g_ep=EgoyMDI1MTAyOC4wIKXMDSoASAFQAw%3D%3D" target="_blank" class="btn btn--footer">Get Direction</a>
                         </p>
                     </div>
                     <div class="column large-5 medium-full">
