--- a/index.html
+++ b/index.html
@@ -123,9 +123,9 @@
             <div class="column large-half medium-full">
                 <h3 class="subhead">Welcome to Agape</h3>
                 <p class="lead">
-                   we believe God’s love transforms lives.<br>
-                   Our desire is to see people come to know Jesus, <br>
-                   grow in His Word, and live out His purpose in their daily lives.<br>
+                   we believe God’s love transforms lives.
+                   Our desire is to see people come to know Jesus, 
+                   grow in His Word, and live out His purpose in their daily lives.
                    We are a Christ-centered, Spirit-led, 
                    and Bible-based church committed to bringing hope and healing to our city and beyond.
                 </p>
