--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
             <div class="column large-half medium-full">
                 <h3 class="subhead">Welcome to Agape</h3>
                 <p class="lead">
-                   We believe God’s love transforms lives.
+                   We believe God’s love transforms lives.<br>
                    Our desire is to see people come to know Jesus, 
                    grow in His Word, and live out His purpose in their daily lives.<br>
                    We are a Christ-centered, Spirit-led, 
