--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
         <div class="row hero-content">
 
-                <div class="column large-full hero-content__text">
+                <div class="column large-full hero-content__text_1">
                 <h1>
                     Teaching and Transforming Lives<br>
                     through the Word of God<br> 
