--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <!--- basic page needs
     ================================================== -->
     <meta charset="utf-8">
-    <title>Agape Baptist Church</title>
+    <title>Hesed</title>
     <meta name="description" content="">
     <meta name="author" content="">
 
@@ -50,7 +50,7 @@
 
         <div class="header-logo">
             <a class="site-logo" href="index.html">
-                <img src="images/ABC LOGO.svg" alt="Homepage">
+                <img src="images/logo.svg" alt="Homepage">
             </a>
         </div>
 
@@ -72,19 +72,21 @@
     ================================================== -->
     <section class="s-hero" data-parallax="scroll" data-image-src="images/hero-bg-3000.jpg" data-natural-width=3000 data-natural-height=2000 data-position-y=center>
 
-       
+        <div class="hero-left-bar"></div>
 
         <div class="row hero-content">
 
-                <div class="column large-full hero-content__text">
+            <div class="column large-full hero-content__text">
                 <h1>
-                    Teaching and Transforming Lives<br>
-                    through the Word of God<br> 
-                    and in Christ’s love<br>
+                    We Exist To <br>
+                    Honor God And <br>
+                    Make Disciples
                 </h1>
-            </div>
 
-               
+                <div class="hero-content__buttons">
+                    <a href="events.html" class="btn btn--stroke">Upcoming Events</a>
+                    <a href="about.html" class="btn btn--stroke">About Us</a>
+                </div>
             </div> <!-- end hero-content__text -->
 
         </div> <!-- end hero-content -->
@@ -118,15 +120,15 @@
         <div class="row row-y-center about-content">
 
             <div class="column large-half medium-full">
-                <h3 class="subhead">Welcome to Agape</h3>
+                <h3 class="subhead">Welcome to Hesed</h3>
                 <p class="lead">
-                   We believe God’s love transforms lives.<br>
-                   Our desire is to see people come to know Jesus, 
-                   grow in His Word, and live out His purpose in their daily lives.<br>
-                   We are a Christ-centered, Spirit-led, 
-                   and Bible-based church committed to bringing hope and healing to our city and beyond.
+                Vero autem et officiis officia sint in odio in iusto. 
+                Blanditiis tempore ipsa saepe quaerat quas sed. Ut velit 
+                necessitatibus est repellat sunt quia fuga doloremque. 
+                Nostrum et ut optio suscipit eos quisquam et. Nulla molestiae 
+                voluptates hic et accusantium occaecati recusandae veniam cum.
                 </p>
-                <a href="about.html" class="btn btn--primary btn--about">More About Agape</a>
+                <a href="about.html" class="btn btn--primary btn--about">More About Hesed</a>
             </div>
 
             <div class="column large-half medium-full">
@@ -134,32 +136,22 @@
                     <li>
                         <h4>Main Church Service</h4>
                         <p>
-                        Sunday - 10:15 AM to 12:20 PM <br>
-                        4th floor, EMARALD-2, Petrapark chapel
-                        Ramamurthy Nagar Main Road.
+                        Sunday - 9:00 AM | 1:00 PM | 4:30 PM <br>
+                        1600 Amphitheatre Parkway, Mt. View, CA, 94043
                         </p>
                     </li>
                     <li>
-                        <h4>Sunday School- ADULT/YOUTH/CHILDREN</h4>
+                        <h4>Kids Church</h4>
                         <p>
-                        Sunday - 12:30 PM to 01:00 PM<br>
-                        4th floor, EMARALD-2, Petrapark chapel
-                        Ramamurthy Nagar Main Road.
+                        Sunday - 9:00 AM | 1:00 PM | 4:30 PM <br>
+                        1600 Amphitheatre Parkway, Mt. View, CA, 94043
                         </p>
                     </li>
                     <li>
-                        <h4>Agape Baptist Fellowship</h4>
+                        <h4>Prayer Meeting</h4>
                         <p>
-                        Sunday - 06:30 PM - 7:30 PM <br>
-                        45/1 8th cross, 5th Main Road,
-                        Kammanahalli, Bengaluru.
-                        </p>
-                    </li>
-                    <li>
-                        <h4>BIBLE STUDY and PRAYER MEETING</h4>
-                        <p>
-                        Wednesday - 07:00 PM - 8:30 PM <br>
-                        Online GOOGLE Meet
+                        Saturday - 7:00 PM <br>
+                        1600 Amphitheatre Parkway, Mt. View, CA, 94043
                         </p>
                     </li>
                 </ul> <!-- end about-sched-->
