--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
 
             <div class="column large-full hero-content__text">
                 <h1>
-                    We Exist To <br>
-                    Honor God And <br>
-                    Make Disciples
+                   Teaching and Transforming Lives<br>
+                    through the Word of God<br> 
+                    and in Christ’s love
                 </h1>
 
                 <div class="hero-content__buttons">
