--- a/index.html
+++ b/index.html
@@ -120,14 +120,15 @@
         <div class="row row-y-center about-content">
 
             <div class="column large-half medium-full">
-                <h3 class="subhead">Welcome to Hesed</h3>
+               <h3 class="subhead">Welcome to Agape</h3>
                 <p class="lead">
-                Vero autem et officiis officia sint in odio in iusto. 
-                Blanditiis tempore ipsa saepe quaerat quas sed. Ut velit 
-                necessitatibus est repellat sunt quia fuga doloremque. 
-                Nostrum et ut optio suscipit eos quisquam et. Nulla molestiae 
-                voluptates hic et accusantium occaecati recusandae veniam cum.
+                   We believe God’s love transforms lives.<br>
+                   Our desire is to see people come to know Jesus, 
+                   grow in His Word, and live out His purpose in their daily lives.<br>
+                   We are a Christ-centered, Spirit-led, 
+                   and Bible-based church committed to bringing hope and healing to our city and beyond.
                 </p>
+
                 <a href="about.html" class="btn btn--primary btn--about">More About Hesed</a>
             </div>
 
