--- a/index.html
+++ b/index.html
@@ -163,6 +163,9 @@
                         <p>
                         Wednesday - 07:00 PM - 8:30 PM <br>
                         Online GOOGLE Meet
+                         <a href="https://meet.google.com/wbk-jbyh-pem" target="_blank" class="meeting-link">
+                        <span class="meeting-link-box"> Meeting link</span>
+                      </a> 
                         </p>
                     </li>
                 </ul> <!-- end about-sched-->
