--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
 
         <div class="row events-header">
             <div class="column">
-                <h2 class="subhead">Upcoming Events.</h2>
+                <h2 class="subhead">Events.</h2>
             </div>
         </div> <!-- end event-header -->
 
@@ -226,19 +226,19 @@
 
             <div class="column events-list__item">
                 <h3 class="display-1 events-list__item-title">
-                    <a href="#0" title="">2019 Kids Church Camp.</a>
+                    <a href="#0" title="">Agape Baptist Church ().</a>
                 </h3>
                 <p>
-                Et consequatur nihil odio odit voluptatem qui. Dolores doloribus 
-                cupiditate totam esse dolores quod. Magni aut incidunt fugiat 
-                labore est ut non ipsam nihil. Voluptate rerum dolores unde 
-                voluptas. Et similique praesentium dolor. Et quod 
-                eius sint at quae est dolores. Beatae quo facere hic.
+                Services in English: <br>
+                Worship Services,
+                Sunday School and Adult Bible Classes on Sundays
+                Mid-week Bible Studies and Prayer time
+
                 </p>
                 <ul class="events-list__meta">
-                    <li class="events-list__meta-date">Saturday, September 28, 2019</li>
-                    <li class="events-list__meta-time">8:00AM - 5:30PM</li>
-                    <li class="events-list__meta-location">1600 Amphitheatre Parkway, Mt. View</li>
+                    <li class="events-list__meta-date">Sunday, November 09, 2025</li>
+                    <li class="events-list__meta-time">10:00AM - 01:00PM</li>
+                    <li class="events-list__meta-location">Petrapark apat, Mt. Ramamurthy Nagar</li>
                 </ul>
             </div> <!-- end events-list__item -->
             <div class="column events-list__item">
