--- a/index.html
+++ b/index.html
@@ -137,8 +137,10 @@
                     <li>
                         <h4>Main Church Service</h4>
                         <p>
+                            <a href="https://www.google.com/maps/place/Agape+Baptist+Church/@13.0120005,77.6707198,59m/data=!3m1!1e3!4m6!3m5!1s0x3bae11238ab91997:0x5ba10b26cddffc3b!8m2!3d13.0119228!4d77.6705699!16s%2Fg%2F11fzwg90t2!5m1!1e2?entry=ttu&g_ep=EgoyMDI1MTAyOS4yIKXMDSoASAFQAw%3D%3D"
+                            style="text-decoration: none; color: inherit; display: block;">
                         Sunday - 10:15 AM to 12:20 PM <br>
-                        4th floor, EMARALD-2, Petrapark chapel
+                        4th floor, EMARALD-2, Petrapark Apartments
                         Ramamurthy Nagar Main Road.
                         </p>
                     </li>
