--- a/index.html
+++ b/index.html
@@ -156,8 +156,7 @@
                         <h4>Agape Baptist Fellowship</h4>
                         <p>
                               <a class="hover-blue-link" 
-                                  href="https://www.google.com/maps/place/Ark+Tuition/@13.0170894,77.6391658,56m/data=!3m1!1e3!4m6!3m5!1s0x3bae1706485c9b03
-                            :0x5633c4050d09483d!8m2!3d13.0170841!4d77.6392018!16s%2Fg%2F11vs24p5w0!5m1!1e2?entry=ttu&g_ep=EgoyMDI1MTAyOS4yIKXMDSoASAFQAw%3D%3D">
+                                  href="https://www.google.com/maps/place/Ark+Tuition/@13.0170841,77.6392018,889m/data=!3m2!1e3!4b1!4m6!3m5!1s0x3bae1706485c9b03:0x5633c4050d09483d!8m2!3d13.0170841!4d77.6392018!16s%2Fg%2F11vs24p5w0!5m1!1e2?entry=ttu&g_ep=EgoyMDI1MTAyOS4yIKXMDSoASAFQAw%3D%3D">
                         Sunday - 06:30 PM - 7:30 PM <br>
                         45/1 8th cross, 5th Main Road,
                         Kammanahalli, Bengaluru.
