--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
 
             <div class="column events-list__item">
                 <h3 class="display-1 events-list__item-title">
-                    <a href="#0" title="">Agape Baptist Church ().</a>
+                    <a href="#0" title="">Agape Baptist Church.</a>
                 </h3>
                 <p>
                 Services in English: <br>
@@ -243,7 +243,12 @@
                 <ul class="events-list__meta">
                     <li class="events-list__meta-date">Sunday, November 09, 2025</li>
                     <li class="events-list__meta-time">10:00AM - 01:00PM</li>
-                    <li class="events-list__meta-location">Petrapark apat, Mt. Ramamurthy Nagar</li>
+                    <li class="events-list__meta-location">
+                        <a href="https://www.google.com/maps/place/Agape+Baptist+Church/@13.0120005,77.6707198,59m/data=!3m1!1e3!4m6!3m5!1s0x3bae11238ab91997:0x5ba10b26cddffc3b!8m2!3d13.0119228!4d77.6705699!16s%2Fg%2F11fzwg90t2!5m1!1e2?entry=ttu&g_ep=EgoyMDI1MTAyOS4yIKXMDSoASAFQAw%3D%3D"
+                            style="text-decoration: none; color: inherit; display: block;">
+                            Petrapark apat, Mt. Ramamurthy Nagar 
+                        </a>
+                            </li>
                 </ul>
             </div> <!-- end events-list__item -->
             <div class="column events-list__item">
