--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
                     <li class="events-list__meta-location">
                         <a href="https://www.google.com/maps/place/Agape+Baptist+Church/@13.0120005,77.6707198,59m/data=!3m1!1e3!4m6!3m5!1s0x3bae11238ab91997:0x5ba10b26cddffc3b!8m2!3d13.0119228!4d77.6705699!16s%2Fg%2F11fzwg90t2!5m1!1e2?entry=ttu&g_ep=EgoyMDI1MTAyOS4yIKXMDSoASAFQAw%3D%3D"
                             style="text-decoration: none; color: inherit; display: block;">
-                            Petrapark apat, Mt. Ramamurthy Nagar 
+                            Petrapark apartment, Ramamurthy Nagar 
                         </a>
                             </li>
                 </ul>
