--- a/index.html
+++ b/index.html
@@ -231,13 +231,13 @@
 
             <div class="column events-list__item">
                 <h3 class="display-1 events-list__item-title">
-                    <a href="#0" title="">Agape Baptist Church.</a>
+                    <a href="#0" title="">Agape Sunday Worship[ENGLISH].</a>
                 </h3>
                 <p>
-                Services in English: <br>
-                Worship Services,
-                Sunday School and Adult Bible Classes on Sundays
-                Mid-week Bible Studies and Prayer time
+                
+                <li>::marker "Worship Services" </li>
+                <li>::marker "Sunday School and Adult Bible Classes" </li>
+                <li>::marker "Mid-week Bible Studies and Prayer time" </li>
 
                 </p>
                 <ul class="events-list__meta">
