--- a/index.html
+++ b/index.html
@@ -235,9 +235,9 @@
                 </h3>
                 <p>
                 
-                <li>::marker "Worship Services" </li>
-                <li>::marker "Sunday School and Adult Bible Classes" </li>
-                <li>::marker "Mid-week Bible Studies and Prayer time" </li>
+                <li>Worship Services </li>
+                <li>Sunday School</li>
+                <li> Adult Bible Classes</li>
 
                 </p>
                 <ul class="events-list__meta">
