--- a/index.html
+++ b/index.html
@@ -235,9 +235,9 @@
                 </h3>
                 <p>
                 
-                <li>Worship Services </li>
-                <li>Sunday School</li>
-                <li> Adult Bible Classes</li>
+                <li class="ai-style-change">Worship Services </li>
+                <li class="ai-style-change">Sunday School</li>
+                <li class="ai-style-change"> Adult Bible Classes</li>
 
                 </p>
                 <ul class="events-list__meta">
