--- a/index.html
+++ b/index.html
@@ -231,14 +231,14 @@
 
             <div class="column events-list__item">
                 <h3 class="display-1 events-list__item-title">
-                    <a href="#0" title="">Agape Sunday Worship[ENGLISH].</a>
+                    <a href="#0" title="">Agape Sunday Worship.</a>
                 </h3>
                 <p>
                 
-                <li class="ai-style-change">Worship Services </li>
-                <li class="ai-style-change">Sunday School</li>
-                <li class="ai-style-change"> Adult Bible Classes</li>
-
+                <li class="ai-style-change">Worship Services : 10:15 AM- 12:00 PM </li>
+                <li class="ai-style-change">Sunday School : 12:30 PM- 01:00 PM</li>
+                <li class="ai-style-change"> Adult Bible Classes : 12:30 PM- 01:00 PM</li>
+                <li class="ai-style-change">Breakfast : 09:30 AM- 10:00 AM  </li>
                 </p>
                 <ul class="events-list__meta">
                     <li class="events-list__meta-date">Sunday, November 09, 2025</li>
