--- a/index.html
+++ b/index.html
@@ -235,10 +235,10 @@
                 </h3>
                 <p>
                 
-                <li class="ai-style-change"> 'Worship Services    : 10:15 AM- 12:00 PM' </li>
-                <li class="ai-style-change"> 'Sunday School       : 12:30 PM- 01:00 PM' </li>
-                <li class="ai-style-change"> 'Adult Bible Classes : 12:30 PM- 01:00 PM' </li>
-                <li class="ai-style-change"> 'Breakfast           : 09:30 AM- 10:00 AM' </li>
+                <li class="ai-style-change"> Worship Services    : 10:15 AM- 12:00 PM </li>
+                <li class="ai-style-change"> Sunday School       : 12:30 PM- 01:00 PM </li>
+                <li class="ai-style-change"> Adult Bible Classes : 12:30 PM- 01:00 PM </li>
+                <li class="ai-style-change"> Breakfast           : 09:30 AM- 10:00 AM </li>
                 </p>
                 <ul class="events-list__meta">
                     <li class="events-list__meta-date">Sunday, November 09, 2025</li>
@@ -253,17 +253,17 @@
             </div> <!-- end events-list__item -->
             <div class="column events-list__item">
                 <h3 class="display-1 events-list__item-title">
-                    <a href="#0" title="">Ark Tuitions, Kammananahalli.</a>
+                    <a href="#0" title="">Ark Tuitions.</a>
                 </h3>
                 <p>
-                An outreach initiative supporting underprivileged children and differently-abled students with education, care, and mentorship<br>
-                    "Let the little children come to Me… for the kingdom of God belongs to such as these." — Mark 10:14
+                An outreach initiative supporting underprivileged and differently-abled children with education, care, and mentorship<br>
+                "Let the little children come to Me… for the kingdom of God belongs to such as these." — Mark 10:14
 
                 </p>
                 <ul class="events-list__meta">
-                    <li class="events-list__meta-date">Saturday, July 27, 2019</li>
-                    <li class="events-list__meta-time">6:00PM - 8:30PM</li>
-                    <li class="events-list__meta-location">1600 Amphitheatre Parkway, Mt. View</li>
+                    <li class="events-list__meta-date">Monday to Friday</li>
+                    <li class="events-list__meta-time">09:00 AM - 03:30 PM</li>
+                    <li class="events-list__meta-location">8th cross, Kammananahalli</li>
                 </ul>
             </div> <!-- end events-list__item -->
             <div class="column events-list__item">
