--- a/index.html
+++ b/index.html
@@ -126,7 +126,9 @@
                    Our desire is to see people come to know Jesus, 
                    grow in His Word, and live out His purpose in their daily lives.<br>
                    We are a Christ-centered, Spirit-led, 
-                   and Bible-based church committed to bringing hope and healing to our city and beyond.
+                   and Bible-based church committed to bringing hope and healing to our city and beyond.<br>
+                     Encourage • Equip • Empower
+
                 </p>
 
                 <a href="about.html" class="btn btn--primary btn--about">More About Agape</a>
