--- a/about.html
+++ b/about.html
@@ -99,31 +99,23 @@
                     <div class="column large-half medium-full">
                         <h2>Our Belief.</h2>
                         <p>
-                        WE believe in the universal church, a living spiritual body 
-                        of which Christ is the Head all regenerated persons are members.
-                        We believe in the local church consisting of a company of believers 
-                        in Jesus Christ, baptized on a credible profession of faith, 
-                        and associated for worship, work and fellowship. 
-                        We believe that a New Testament church, according to divine 
-                        purpose and plan, is a visible, local organized body;
-                        that it is comprised of baptized believers associated together 
-                        by a covenant of faith and fellowship in the gospel; 
-                        that it is a sovereign, independent, democratic and evangelistic body; 
-                        that its ministry is gloriously blessed with the presence and 
-                        leadership of the Holy Spirit and the light and revelation of the written Word.
+                        The purpose of Agape Baptist Church is to glorify God by making disciples 
+                            who know God personally and worship Him enthusiastically; 
+                            who apply Biblical truth to daily living; 
+                            who generously and lovingly share their lives and
+                            resources with their brothers and sisters in Christ 
+                            and who are burden and equipped to reach the world for Christ
                         </p>
                     </div>
 
                     <div class="column large-half medium-full">
                         <h2>Our Mission.</h2>
                         <p>
-                        It was in 2003 that the Lord led Aroop and Rebecca Shelli Kumar 
-                        with their two young children, out of a local Baptist Church 
-                        in Koramangala, Bangalore, to the locality of Ramamurthy Nagar,
-                        Bangalore, to plant a church. 
-                        Worship services were begun in a rented facility in November 
-                        with a couple of families joining the Agape Baptist Fellowship. 
-                        Children’s clubs and AWANA were held regularly in this locality.
+                        The mission of Agape Baptist Church can be summed up in the following:  
+                            E3 (E-CUBE) ENDEAVOURS 
+                        •	ENCOURAGE people to trust in the gospel of the Lord Jesus Christ<br>
+                        •	EQUIP believers to become Disciples of Christ <br>
+                        •	EMPOWER disciples to become Disciplemakers for Christ<br>
                         </p>
                     </div>
                 </div>
