--- a/about.html
+++ b/about.html
@@ -101,7 +101,7 @@
                         <p>
                         The purpose of Agape Baptist Church is to glorify God by making disciples 
                             who know God personally and worship Him enthusiastically; 
-                            who apply Biblical truth to daily living; 
+                            who apply Biblical truth to daily living; <br>
                             who generously and lovingly share their lives and
                             resources with their brothers and sisters in Christ 
                             and who are burden and equipped to reach the world for Christ
@@ -112,7 +112,7 @@
                         <h2>Our Mission.</h2>
                         <p>
                         The mission of Agape Baptist Church can be summed up in the following:  
-                            E3 (E-CUBE) ENDEAVOURS 
+                            E3 (E-CUBE) ENDEAVOURS <br>
                         •	ENCOURAGE people to trust in the gospel of the Lord Jesus Christ<br>
                         •	EQUIP believers to become Disciples of Christ <br>
                         •	EMPOWER disciples to become Disciplemakers for Christ<br>
