--- a/about.html
+++ b/about.html
@@ -111,7 +111,7 @@
                     <div class="column large-half medium-full">
                         <h2>Our Mission.</h2>
                         <p>
-                        The mission of Agape Baptist Church can be summed up in the following:  
+                        The mission of Agape Baptist Church can be summed up in the following: <br> 
                             E3 (E-CUBE) ENDEAVOURS <br>
                         •	ENCOURAGE people to trust in the gospel of the Lord Jesus Christ<br>
                         •	EQUIP believers to become Disciples of Christ <br>
