--- a/about.html
+++ b/about.html
@@ -104,7 +104,10 @@
                             who apply Biblical truth to daily living; <br>
                             who generously and lovingly share their lives and
                             resources with their brothers and sisters in Christ 
-                            and who are burden and equipped to reach the world for Christ
+                            and who are burden and equipped to reach the world for Christ <br>
+
+                        "Go therefore and make disciples of all nations, baptizing them in the name of the Father and of the Son and of the Holy Spirit." — Matthew 28:19
+
                         </p>
                     </div>
 
@@ -116,12 +119,17 @@
                         •	ENCOURAGE people to trust in the gospel of the Lord Jesus Christ<br>
                         •	EQUIP believers to become Disciples of Christ <br>
                         •	EMPOWER disciples to become Disciplemakers for Christ<br>
+                            "He has sent Me to heal the brokenhearted, to proclaim liberty to the captives and recovery of sight to the blind..." — Luke 4:18
+
                         </p>
                     </div>
                 </div>
 
                 <blockquote cite="http://where-i-got-my-info-from.com">
                     <p>
+                    Agape Baptist Church exists to be a place of restoration, discipleship, and empowerment 
+                        — where hearts are restored and lives are built upon the Word of God.<br>
+
                     For God so loved the world, that he gave his only Son, that whoever believes in 
                     him should not perish but have eternal life. For God did not send his Son into 
                     the world to condemn the world, but in order that the world might be 
